--- a/internal/mailer/templates/user_invitation.tmpl
+++ b/internal/mailer/templates/user_invitation.tmpl
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>Hi {{.Username}},</p>
-    <p>Tahnks for signing up for GoSocial. We're excited to have you on board!</p>
+    <p>Thanks for signing up for GoSocial. We're excited to have you on board!</p>
     <p>To complete your registration, please click the link below to confirm your email address:</p>
     <p><a href="{{.ActivationURL}}">{{.ActivationURL}}</a></p>
     <p>I you want to actiivate your account manually, you can copy and paste above link.</p>
